--- a/Assignment2/Ass2-template.html
+++ b/Assignment2/Ass2-template.html
@@ -3007,6 +3007,18 @@ n
 </div>
 <div id="q-7" class="section level2 tabset">
 <h2 class="tabset">Q 7</h2>
+<div id="a-2" class="section level3">
+<h3>a</h3>
+<p>The probabilities for <em>y</em> in the table does sum to equal 1</p>
+<pre class="r"><code>0.09+0.30+0.37+0.20+.04</code></pre>
+<pre><code>## [1] 1</code></pre>
+</div>
+<div id="b-2" class="section level3">
+<h3>b</h3>
+</div>
+<div id="c-2" class="section level3">
+<h3>c</h3>
+</div>
 </div>
 <div id="q-8" class="section level2 tabset">
 <h2 class="tabset">Q 8</h2>
